--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,5 +1,6 @@
 {
   "pages": [
+    "pages/login/login",
     "pages/answer/answer",
     "pages/ceshi/ceshi",
     "pages/index/index",
@@ -15,17 +16,16 @@
     "pages/openapi/cloudid/cloudid",
     "pages/im/im",
     "pages/im/room/room",
-    
     "pages/wrong/wrong",
     "pages/ranking/ranking",
-    "pages/user/user"
- 
+    "pages/user/user",
+    "pages/ItemBank/ItemBank"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#F6F6F6",
-    "navigationBarTitleText": "测试云开发",
+    "navigationBarTitleText": "webGo",
     "navigationBarTextStyle": "black"
   },
   "tabBar": {
@@ -37,13 +37,13 @@
         "selectedIconPath": "images/tabar/index1.png",
         "iconPath": "images/tabar/index.png",
         "pagePath": "pages/answer/answer",
-        "text": "答题"
+        "text": "题库"
       },
       {
-        "selectedIconPath": "images/tabar/index22.png",
-        "iconPath": "images/tabar/index2.png",
+        "selectedIconPath": "images/tabar/index2.png",
+        "iconPath": "images/tabar/index22.png",
         "pagePath": "pages/wrong/wrong",
-        "text": "错题"
+        "text": "面经"
       },
       {
         "selectedIconPath": "images/tabar/index33.png",
