--- a/project.config.json
+++ b/project.config.json
@@ -82,6 +82,28 @@
 					"id": -1,
 					"name": "pages/login/login",
 					"pathName": "pages/login/login",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/answer/answer",
+					"pathName": "pages/answer/answer",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/answeEndr/answeEndr",
+					"pathName": "pages/answeEndr/answeEndr",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": 7,
+					"name": "pages/answerEnd/answerEnd",
+					"pathName": "pages/answerEnd/answerEnd",
+					"query": "",
 					"scene": null
 				}
 			]
